software-store (0.1.1) karmic; urgency=low

  * fix icon loading/installing
  * add dependencies:
    - gnome-menus (LP: #419152)
    - python-xapian (LP: #418580)
    - policykit-1-gnome | policykit-1-qt (LP: #419154)
  * add about dialog
  * use gtk-missing-image if no image is available (LP: #418805)
  * fix unneeded scrollbar (LP: #418817)
  * highlight present location in navigation bar (LP: #418791)
  * change category sort order to conform with the spec (LP: #418580)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 Aug 2009 15:21:57 +0200

software-store (0.1) karmic; urgency=low

  * Initial release

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Aug 2009 14:52:41 +0200