@@ -23,3 +23,4 @@ XAPIAN_VALUE_GETTEXT_DOMAIN - gettext domain
 XAPIAN_VALUE_ARCHIVE_SECTION - archive section (main, restricted, universe, multiverse)
 XAPIAN_VALUE_ARCHIVE_ARCH - architectures (seperated with ",", e.g. i386,amd64) - may be empty
 XAPIAN_VALUE_POPCON - popcon data
+XAPIAN_VALUE_SUMMARY - summary text
