@@ -29,3 +29,4 @@ XAPIAN_VALUE_GETTEXT_DOMAIN = 173
 XAPIAN_VALUE_ARCHIVE_SECTION = 174
 XAPIAN_VALUE_ARCHIVE_ARCH = 175
 XAPIAN_VALUE_POPCON = 176
+XAPIAN_VALUE_SUMMARY = 177
